[package]
name = "wuhaurou_cargo"
version = "0.1.0"
authors = ["wuhuarou <wobusbz2019@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

